# python-tddpp

./: .gitignore  README.md  main.py  pyproject.toml  pytest_plugins.py
TestRunner/: GenericTestRunner.py  SubProcessTestRunner.py
assets/: test_class.py
lib/: agents.py  utils.py
test/: test_ExampleClass.py
